# psi-continuum-v2

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  run_all.py  setup.py
analysis/: bao_desi_dr2_test.py  bao_test_psicdm.py  check_hz_data.py  check_models.py  check_pantheonplus_data.py  eps_best_joint_test.py  hz_test_psicdm.py  joint_fit_psicdm.py  make_all_plots.py  scan_eps_psicdm.py  sn_test_lcdm_pplus_simple.py  sn_test_psicdm_pplus.py
cosmology/background/: __init__.py  distances.py  lcdm.py  psicdm.py
cosmology/data_loaders/: __init__.py  bao_loader.py  covariance_loader.py  hz_loader.py  pantheonplus_loader.py  validators.py
cosmology/likelihoods/: __init__.py  bao_likelihood.py
cosmology/models/: __init__.py
data/hz/: HZ_compilation.csv
psi_continuum_v2/: __init__.py
results/tables/: eps_best_joint.txt  eps_scan_psicdm.txt  pantheonplus_hf_chi2_lcdm.txt
results/tables/hz/: hz_psicdm_chi2.txt
results/tables/psi_tests/: chi2_eps_scan.txt
